Configured docker compose for reservation.

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,5 +8,8 @@ http {
               location /api/v1/accommodation {
                 proxy_pass http://accommodation-service:8080;
               }
+			  location /api/v1/reservation {
+                proxy_pass http://reservation-service:8080;
+              }
         }
 }
