--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - accommodation-service
+      - reservation-service
     ports:
       - "4000:4000"
   accommodation-service:
@@ -16,6 +17,7 @@ services:
       DATABASE_DOMAIN: accommodation-db
       DATABASE_SCHEMA: accommodation
       DATABASE_PORT: 5432
+      RESERVATION_URL: http://reservation-service:8080/api/v1/reservation
     depends_on:
       accommodation-db:
         condition: service_healthy
@@ -34,5 +36,33 @@ services:
     container_name: accommodation-db
     volumes:
       - postgres_accommodation:/var/lib/postgresql/data
+  reservation-service:
+    image: aleksandarb99/reservation:latest
+    environment:
+      DATABASE_USERNAME: reservation
+      DATABASE_PASSWORD: admin
+      DATABASE_DOMAIN: reservation-db
+      DATABASE_SCHEMA: reservation
+      DATABASE_PORT: 5432
+      ACCOMMODATION_URL: http://accommodation-service:8080/api/v1/accommodation
+    depends_on:
+      reservation-db:
+        condition: service_healthy
+  reservation-db:
+    image: postgres:13
+    environment:
+      - POSTGRES_DB=reservation
+      - POSTGRES_USER=reservation
+      - POSTGRES_PASSWORD=admin
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U reservation" ]
+      interval: 10s
+      timeout: 5s
+      retries: 6
+    container_name: reservation-db
+    volumes:
+      - postgres_reservation:/var/lib/postgresql/data
 volumes:
   postgres_accommodation:
+  postgres_reservation:
