--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,23 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
+      - user-service
       - accommodation-service
       - reservation-service
     ports:
       - "4000:4000"
+  user-service:
+    image: aleksandarb99/user:latest
+    environment:
+      DATABASE_USERNAME: user
+      DATABASE_PASSWORD: admin
+      DATABASE_DOMAIN: user-db
+      DATABASE_SCHEMA: user
+      DATABASE_PORT: 5432
+#      Add urls to another microservices
+    depends_on:
+      user-db:
+        condition: service_healthy
   accommodation-service:
     image: aleksandarb99/accommodation:latest
     environment:
@@ -21,6 +34,21 @@ services:
     depends_on:
       accommodation-db:
         condition: service_healthy
+  user-db:
+    image: postgres:13
+    environment:
+      - POSTGRES_DB=user
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=admin
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U user" ]
+      interval: 10s
+      timeout: 5s
+      retries: 6
+    container_name: user-db
+    volumes:
+      - postgres_user:/var/lib/postgresql/data
   accommodation-db:
     image: postgres:13
     environment:
@@ -54,5 +82,6 @@ services:
     volumes:
       - postgres_reservation:/data/db
 volumes:
+  postgres_user:
   postgres_accommodation:
   postgres_reservation:
