--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,9 @@ events {
 http {
         server {
               listen 4000;
+              location /api/v1/user {
+                proxy_pass http://user-service:8080;
+              }
               location /api/v1/accommodation {
                 proxy_pass http://accommodation-service:8080;
               }
