--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
       DATABASE_DOMAIN: user-db
       DATABASE_SCHEMA: user
       DATABASE_PORT: 5432
-#      Add urls to another microservices
+      RESERVATION_URL: http://reservation-service:8080/api/v1/reservation
+      ACCOMMODATION_URL: http://accommodation-service:8080/api/v1/accommodation
     depends_on:
       user-db:
         condition: service_healthy
@@ -71,6 +72,7 @@ services:
       DATABASE_SCHEMA: reservation
       DATABASE_PORT: 27017
       ACCOMMODATION_URL: http://accommodation-service:8080/api/v1/accommodation
+      USER_URL: http://user-service:8080/api/v1/user
     depends_on:
       - reservation-db
   reservation-db:
