--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       DATABASE_DOMAIN: user-db
       DATABASE_SCHEMA: user
       DATABASE_PORT: 5432
+      AUTH_URL: http://user-service:8080
       RESERVATION_URL: http://reservation-service:8080/api/v1/reservation
       ACCOMMODATION_URL: http://accommodation-service:8080/api/v1/accommodation
     depends_on:
@@ -31,10 +32,12 @@ services:
       DATABASE_DOMAIN: accommodation-db
       DATABASE_SCHEMA: accommodation
       DATABASE_PORT: 5432
+      AUTH_URL: http://user-service:8080
       RESERVATION_URL: http://reservation-service:8080/api/v1/reservation
     depends_on:
       accommodation-db:
         condition: service_healthy
+      user-service:
   user-db:
     image: postgres:13
     environment:
@@ -71,10 +74,12 @@ services:
       DATABASE_DOMAIN: reservation-db
       DATABASE_SCHEMA: reservation
       DATABASE_PORT: 27017
+      AUTH_URL: http://user-service:8080
       ACCOMMODATION_URL: http://accommodation-service:8080/api/v1/accommodation
       USER_URL: http://user-service:8080/api/v1/user
     depends_on:
       - reservation-db
+      - user-service
   reservation-db:
     container_name: reservation-db
     image: mongo:latest
