--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,19 @@ events {
 http {
         server {
               listen 4000;
+			  
+			  location /login {
+                proxy_pass http://user-service:8080;
+              }
+			  
+			  location /logout {
+                proxy_pass http://user-service:8080;
+              }
+			  
+			  location /oauth2 {
+                proxy_pass http://user-service:8080;
+              }
+			  
               location /api/v1/user {
                 proxy_pass http://user-service:8080;
               }
