--- a/accommodation-frontend/package.json
+++ b/accommodation-frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "cors-anywhere": "^0.4.4",
     "ngx-cookie-service": "^16.0.0",
     "rxjs": "~7.8.0",
